# ai_nutrition_companion

./: .gitignore  README.md  config.py  main.py  pyproject-windows.toml  pyproject.toml  send_email_by_llm.py  test.py
app/: asr.py  llm.py  main.py  tts.py
app/ai_agent_hybrid/: ai_agent_hybrid.py
app/ai_agent_hybrid/static/: main.js
app/core/: asr.py
app/core/audio/: convert.py  play.py  record.py
app/pipeline/: cc_hybrid.py  cc_openai.py  openai_realtime.py
app/services/: asr.py  llm.py  tts.py
app/static/: index.html  styles.css
app/templates/: index.html
app/terminal/: cc_hybrid.py  cc_openai.py  rt_openai.py  rt_xilab.py
app/utils/: audio_decode.py  audio_record.py
app/web/hybrid/: app.py
app/web/hybrid/static/: index.html  styles.css
app/web/openai/: app.py  audio_util.py  tools.py
app/web/openai/data/: user_profile.json  user_profile_template.json
app/web/openai/data/test_user/: healthy_swap.json  user_profile.json  vitality_data.json
app/web/openai/static/: index.html  main.js  styles.css
app/web/openai_ptalk/: app.py  send_to_client.py  tools.py  util.py
app/web/openai_ptalk/data/: user_profile_template.json
app/web/openai_ptalk/data/meal_photos/: meal_photos_nutrition.json
app/web/openai_ptalk/data/nutrition/: meal_photos_nutrition.json  takeaway_nutrition.json
app/web/openai_ptalk/data/test_user/: healthy_swap.json  user_profile.json  vitality_data.json  weekly_summary.json
app/web/openai_ptalk/static/: index.html  main.js  styles.css
app/web/openai_ptalk/static/js/: audio.js  pcmprocessor.js  ui.js  websocket.js  wsclient.js
app/web/openai_rt_t2t/: app.py
app/web/openai_rt_t2t/static/: index.html
app/web/openai_t2t/: app.py
app/web/openai_t2t/static/: index.html
app/web/ui_design/dark_themed/: index.html  styles.css
app/web/ui_design/debug_basic/: main.js
app/web/ui_design/option_a/: index.html
app/web/xilabs/: app.py
app/web/xilabs/static/: main.js
tests/: check_torch.py  simp_test_llm.py  test_weekly_review_display.js  unit_test_asr.py  unit_test_e2e.py  unit_test_llm.py  unit_test_tts.py  ut_send_email.py
tests/serivices/: unit_test_llm.py  unit_test_tts.py
