[tool.poetry]
name = "ai-nutrition-companion"
version = "0.1.0"
description = "Real-time conversational AI nutrition companion"
authors = ["Daniel Huang <huangdai@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "ai_nutrition_companion" }]
# homepage = ""
# repository = ""
# documentation = ""
keywords = ["nutrition", "ai", "real-time", "voice"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = { version = ">=0.34.0,<0.35.0", extras = ["standard"] }
jinja2 = ">=3.1.6,<4.0.0"
openai-whisper = ">=20240930"
torch = { version = "2.5.1", source = "pytorch-cu121" }
torchvision = { version = "0.20.1", source = "pytorch-cu121" }
torchaudio = { version = "2.5.1", source = "pytorch-cu121" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
